src/app/menu/menu.component.scss
@media (max-width: 991px) {
    .hamburger{
        display: flex !important;
    }
    .menu{
      width: 100% !important;
    }
}

.notif_critical {
  background:	#5D0D0D;
  border: 5px solid #3C0404;
  &:hover{
    background-color: #3C0404;
    cursor: pointer;
}
}
.notif_error {
  background: #dc143c;
  border: 5px solid #8F0621;
    &:hover{
    background-color: #8F0621;
    cursor: pointer;
}
}
.notif_warning {
  background: #FF7F00;
  border: 5px solid #A65C00;
  &:hover{
    background-color: #A65C00;
    cursor: pointer;
}
}
.notif-list{
  max-height: 300px;
  overflow: scroll;
}
.notif_info {
  background: #0A4A0A;
  border: 5px solid #133813;
    &:hover{
    background-color: #133813;
    cursor: pointer;
}
}
.menu{
background: white;
position: fixed;
z-index: 9999;
width: calc(100% - 220px);
top: 0;
height: 50px;
display: flex;
justify-content: flex-end;
border-bottom: 2px solid #dfe4ed;

  /deep/ .main-menu{
    ul{
      background: #fff;
      position: absolute;
      left: 0;
      top: 50px;
      padding: 0 !important;
      border-right: 2px solid #dfe4ed;
      border-bottom: 2px solid #dfe4ed;
      .menu-item.active{
        .item-link{
          color: #fff !important;
        }
      }
        .item-link{
         color: #2e3d50 !important;
      }
    }
  }
}
.menu-button{
border:none;
background: transparent;
 color: black;
}
.notif-number{
  border-radius: 100%;
  border: 10px solid red;
  position: absolute;
  top: 6px;
  left: 22px;
  div{
    position: absolute;
    top: -20px;
    left: -8px;
    font-size: 10px;
    width: 15px;
    text-align: center;
    color: #fff;
    font-family: 'Open sans', sans-serif;

  }
}
.hamburger{
    display: none;
    position: absolute;
    left: 15px;
    top: 15px;
    cursor: pointer;
}
.nav-item{
    &.opened{
        .dropdown-menu {
            display: block;
          }
        ~.items-overlay {
            opacity: 1;
            transition:
              .2s opacity 0s,
              0s visibility 0s;
            visibility: visible;
          }
    }
}
      .items-overlay {
        background: rgba(#3c4e62,.2);
        height: 100%;
        left: 0;
        opacity: 0;
        position: fixed;
        top: 0;
        transition:
          .2s opacity 0s,
          0s visibility .2s;
        visibility: hidden;
        width: 100%;
        z-index: 9998;
      }
.dropdown-menu {
          background: #3c4e62;
          box-shadow: 0 5px 10px 2px rgba(#000,.25);
          display: none;
          right: 21px;
          margin: 0 0 0 -150px;
          padding: 0;
          position: absolute;
          top: 100%;
          width: 300px;
          z-index: 9999;


          .rtl & {
            left: auto;
            margin: 0 -150px 0 0;
            right: 50%;

          }
          &:before {
            border: 10px solid transparent;
            border-bottom-color: #3c4e62;
            bottom: 100%;
            content: '';
            right: 10%;
            margin: 0 0 0 -10px;
            position: absolute;

          }
          .menu-title,
          .menu-footer {
            margin: 0;
            padding: 11px;
            text-align: center;
          }
          .menu-title {
            border-bottom: 1px solid rgba(#fff,.1);
            color: #fff;
            font-size: 16px;
            line-height: 1.3;
          }
          .menu-footer {
            background: #36475a;
            border-top: 1px solid rgba(#fff,.1);
            button {
              color: #fff;
              background: transparent;
              border: none !important;
              &:hover {
                color: rgba(#fff,.8);
                cursor: pointer;
              }
            }
          }
           ul {
            list-style-type: none;
            margin: 0;
            max-height: 241px;
            overflow: auto;
            padding: 0;

             li {
               display: flex;
               justify-content: center;
              //border-bottom: 1px solid rgba(#fff,.05);
              transition: all 0.2s;
               button {
                align-items: center;
                color: #fff;
                display: flex;
                padding: 11px;
                transition: background .2s;
                background-color: transparent !important;
                border: none !important;
                cursor: pointer;
                .content {
                  font-size: .85rem;

                  .desc {
                    display: block;
                    &:first-child{
                      text-align: left;
                      margin-bottom: 10px;
                    }
                    &:last-child{
                      text-align: right;
                      margin-top: 10px;
                    }
                  }
                  .date {
                    display: block;
                    font-size: .75rem;
                    font-style: italic;
                    margin-top: 4px;
                    opacity: .6;
                  }
                  .meta {
                    align-items: flex-end;
                    display: flex;
                    justify-content: space-between;
                    line-height: 1.3;
                    margin-bottom: 4px;

                    .date {
                      margin: 0 0 0 11px;
                    }
                  }
                }
              }
            }
          }
          &.mini-menu {
            left: auto;
            right: 0;
            width: 220px;


            .rtl & {
              left: 0;
              right: auto;
            }
            &:before {
              display: none;
            }
             ul {
               li {
                 button {
                  padding-top: 8px;
                  padding-bottom: 8px;
                  background-color: transparent !important;
                  border: none !important;

                  .fa {
                    margin-right: 11px;
                    min-width: 15px;

                    .rtl & {
                      margin-left: 11px;
                      margin-right: 0;
                    }
                  }
                }
              }
            }
          }
        }

